--- a/.github/workflows/pake_build.yaml
+++ b/.github/workflows/pake_build.yaml
@@ -12,20 +12,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [linux, windows, macos]
+        build: [macos]
         include:
-        - build: linux
-          os: ubuntu-latest
-          rust: nightly
-          target: x86_64-unknown-linux-musl
-        - build: windows
-          os: windows-latest
-          rust: nightly-x86_64-msvc
-          target: x86_64-pc-windows-msvc
         - build: macos
           os: macos-latest
           rust: nightly
-          target: x86_64-apple-darwin
+          target: aarch64-apple-darwin
       fail-fast: false
 
     steps:
@@ -45,26 +37,9 @@ jobs:
         override: true
         target: ${{ matrix.target }}
 
-    - name: install dependencies (ubuntu only)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf gnome-video-effects gnome-video-effects-extra
-
-    - name: build for Ubuntu
-      if: matrix.os == 'ubuntu-latest'
-      run: npm run build:all-unix
-
     - name: build for MacOS
       if: matrix.os == 'macos-latest'
-      run: |
-        rustup target add aarch64-apple-darwin
-        npm run build:all-unix
-
-    - name: build for windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        npm run build:all-windows
+      run: npm run build:all-unix
 
     # - name: Create Release and Upload Release Asset
     #   uses: softprops/action-gh-release@v1
