--- a/.github/workflows/pake_build.yaml
+++ b/.github/workflows/pake_build.yaml
@@ -11,22 +11,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [linux, windows, macos]
+        build: [macos]
         include:
-        - build: linux
-          os: ubuntu-20.04
-          rust: stable
-          target: x86_64-unknown-linux-musl
-          # archive-name: target-linux.tar.gz
-        - build: windows
-          os: windows-latest
-          rust: stable-x86_64-msvc
-          target: x86_64-pc-windows-msvc
-          # archive-name: target-windows.tar.gz
         - build: macos
           os: macos-latest
           rust: stable
-          target: x86_64-apple-darwin
+          target: aarch64-apple-darwin
           # archive-name: target-macos.tar.gz
       fail-fast: false
 
@@ -46,28 +36,10 @@ jobs:
         profile: minimal
         override: true
         target: ${{ matrix.target }}
-    
-    - name: install dependencies (ubuntu only)
-      if: matrix.os == 'ubuntu-20.04'
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev gnome-video-effects gnome-video-effects-extra
-        version: 1.1
-
-    - name: build for Ubuntu
-      if: matrix.os == 'ubuntu-20.04'
-      run: npm run build:all-unix
 
     - name: build for MacOS
       if: matrix.os == 'macos-latest'
-      run: |
-        rustup target add aarch64-apple-darwin
-        npm run build:all-unix
-
-    - name: build for windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        npm run build:all-windows
+      run: npm run build:all-unix
 
     - name: Upload files
       env:
