--- a/.github/workflows/pake_build_single_app.yaml
+++ b/.github/workflows/pake_build_single_app.yaml
@@ -47,16 +47,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [linux, macos, windows]
+        build: [macos]
         include:
-          - build: linux
-            os: ubuntu-latest
-            rust: stable
-            target: x86_64-unknown-linux-musl
-          - build: windows
-            os: windows-latest
-            rust: stable-x86_64-msvc
-            target: x86_64-pc-windows-msvc
+          # - build: linux
+          #   os: ubuntu-latest
+          #   rust: stable
+          #   target: x86_64-unknown-linux-musl
+          # - build: windows
+          #   os: windows-latest
+          #   rust: stable-x86_64-msvc
+          #   target: x86_64-pc-windows-msvc
           - build: macos
             os: macos-latest
             rust: stable
@@ -100,13 +100,13 @@ jobs:
           npm install
           npm run build:config
 
-      - name: Build for Ubuntu
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          npm run tauri build
-          mkdir -p output/linux
-          mv src-tauri/target/release/bundle/deb/*.deb output/linux/${{inputs.title}}_`arch`.deb
-          mv src-tauri/target/release/bundle/appimage/*.AppImage output/linux/"${{inputs.title}}"_`arch`.AppImage
+      # - name: Build for Ubuntu
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: |
+      #     npm run tauri build
+      #     mkdir -p output/linux
+      #     mv src-tauri/target/release/bundle/deb/*.deb output/linux/${{inputs.title}}_`arch`.deb
+      #     mv src-tauri/target/release/bundle/appimage/*.AppImage output/linux/"${{inputs.title}}"_`arch`.AppImage
 
       - name: Build for macOS
         if: matrix.os == 'macos-latest'
@@ -117,12 +117,12 @@ jobs:
           mkdir -p output/macos
           mv src-tauri/target/universal-apple-darwin/release/bundle/dmg/*.dmg output/macos/"${{inputs.title}}".dmg
 
-      - name: Build for Windows
-        if: matrix.os == 'windows-latest'
-        run: |
-          npm run tauri build -- --target x86_64-pc-windows-msvc
-          New-Item -Path "output\windows" -ItemType Directory
-          Move-Item -Path "src-tauri\target\x86_64-pc-windows-msvc\release\bundle\msi\*.msi" -Destination "output\windows\${{inputs.title}}_x64.msi"
+      # - name: Build for Windows
+      #   if: matrix.os == 'windows-latest'
+      #   run: |
+      #     npm run tauri build -- --target x86_64-pc-windows-msvc
+      #     New-Item -Path "output\windows" -ItemType Directory
+      #     Move-Item -Path "src-tauri\target\x86_64-pc-windows-msvc\release\bundle\msi\*.msi" -Destination "output\windows\${{inputs.title}}_x64.msi"
 
       - name: Restore Cargo Lock File(Windows Only)
         if: matrix.os == 'windows-latest'
